mecanismo de apuraçao do vencedor feito

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Jogo da Velha</h1>
-      <div class="current-player">Jogador: <span class="player-marker">X</span></div>
+      <div class="current-player">Jogador: <span class="player-marker"></span></div>
     </header>
     <main class="board">
       <div class="board-div"></div>
